[package]
name = "mls-assist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openmls_traits = { git = "https://github.com/openmls/openmls.git", rev = "96c38a806f9c706d2cf67566c9c846eee3ac4430" }
serde = { version = "1.0.147", features = ["derive"] }
openmls = { git = "https://github.com/openmls/openmls.git", rev = "96c38a806f9c706d2cf67566c9c846eee3ac4430" }
openmls_rust_crypto = { git = "https://github.com/openmls/openmls.git", rev = "96c38a806f9c706d2cf67566c9c846eee3ac4430" }
thiserror = "^1.0"
chrono = { version = "0.4.19", features = ["serde"] }
