[package]
name = "mls-assist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
openmls_traits = { version = "0.4.0-pre.1" }
openmls = { version = "0.7.0-pre.1" }
openmls_rust_crypto = { version = "0.4.0-pre.1" }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
