[package]
name = "mls-assist"
version = "0.1.0"
edition = "2021"
LICENSE = "GPL-3.0"

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
openmls_traits = { git = "https://github.com/openmls/openmls.git" }
openmls = { git = "https://github.com/openmls/openmls.git" }
openmls_rust_crypto = { git = "https://github.com/openmls/openmls.git" }
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
